table to div and span

--- a/index.html
+++ b/index.html
@@ -9,89 +9,89 @@
 	</head>
 	<body>
 		<h1>Minfield</h1>
-		<table>
-			<tbody>
-				<tr>
-					<td class="blue">1</td>
-					<td><img alt="bomb" src="assets/bomb.gif"></td>
-					<td class="blue">1</td>
-					<td></td>
-					<td class="blue">1</td>
-					<td><img alt="bomb" src="assets/bomb.gif"></td>
-					<td class="blue">1</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td class="green">2</td>
-					<td class="green">2</td>
-					<td class="green">2</td>
-					<td></td>
-					<td class="blue">1</td>
-					<td class="blue">1</td>
-					<td class="blue">1</td>
-					<td></td>
-				</tr>
-				<tr>
-					<td class="blue">1</td>
-					<td><img alt="bomb" src="assets/bomb.gif"></td>
-					<td class="blue">1</td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-				</tr>
-				<tr>
-					<td class="green">2</td>
-					<td class="green">2</td>
-					<td class="blue">1</td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-					<td></td>
-				</tr>
-				<tr>
-					<td><img alt="bomb" src="assets/bomb.gif"></td>
-					<td class="blue">1</td>
-					<td></td>
-					<td class="blue">1</td>
-					<td class="blue">1</td>
-					<td class="green">2</td>
-					<td class="blue">1</td>
-					<td class="blue">1</td>
-				</tr>
-				<tr>
-					<td class="green">2</td>
-					<td class="red">3</td>
-					<td class="red">3</td>
-					<td class="red">3</td>
-					<td><img alt="bomb" src="assets/bomb.gif"></td>
-					<td class="green">2</td>
-					<td><img alt="bomb" src="assets/bomb.gif"></td>
-					<td class="hide blue">1</td>
-				</tr>
-				<tr>
-					<td class="hide blue">1</td>
-					<td><img alt="bomb" src="assets/bomb.gif"></td>
-					<td><img alt="bomb" src="assets/bomb.gif"></td>
-					<td><img alt="bomb" src="assets/bomb.gif"></td>
-					<td class="hide red">3</td>
-					<td class="red">3</td>
-					<td class="hide green">2</td>
-					<td class="hide blue">1</td>
-				</tr>
-				<tr>
-					<td class="hide blue">1</td>
-					<td class="hide green">2</td>
-					<td class="hide red">3</td>
-					<td class="hide green">2</td>
-					<td class="hide green">2</td>
-					<td><img alt="bomb" src="assets/bomb.gif"></td>
-					<td class="hide blue">1</td>
-					<td class="hide"></td>
-				</tr>
-			</tbody>
-		</table>
+		<section>
+			<div class="containers">
+				<div class="row">
+					<span class="blue">1</span>
+					<span><img alt="bomb" src="assets/bomb.gif"></span>
+					<span class="blue">1</span>
+					<span></span>
+					<span class="blue">1</span>
+					<span><img alt="bomb" src="assets/bomb.gif"></span>
+					<span class="blue">1</span>
+					<span></span>
+				</div>
+				<div class="row">
+					<span class="green">2</span>
+					<span class="green">2</span>
+					<span class="green">2</span>
+					<span></span>
+					<span class="blue">1</span>
+					<span class="blue">1</span>
+					<span class="blue">1</span>
+					<span></span>
+				</div>
+				<div class="row">
+					<span class="blue">1</span>
+					<span><img alt="bomb" src="assets/bomb.gif"></span>
+					<span class="blue">1</span>
+					<span></span>
+					<span></span>
+					<span></span>
+					<span></span>
+					<span></span>
+				</div>
+				<div class="row">
+					<span class="green">2</span>
+					<span class="green">2</span>
+					<span class="blue">1</span>
+					<span></span>
+					<span></span>
+					<span></span>
+					<span></span>
+					<span></span>
+				</div>
+				<div class="row">
+					<span><img alt="bomb" src="assets/bomb.gif"></span>
+					<span class="blue">1</span>
+					<span></span>
+					<span class="blue">1</span>
+					<span class="blue">1</span>
+					<span class="green">2</span>
+					<span class="blue">1</span>
+					<span class="blue">1</span>
+				</div>
+				<div class="row">
+					<span class="green">2</span>
+					<span class="red">3</span>
+					<span class="red">3</span>
+					<span class="red">3</span>
+					<span><img alt="bomb" src="assets/bomb.gif"></span>
+					<span class="green">2</span>
+					<span><img alt="bomb" src="assets/bomb.gif"></span>
+					<span class="hide blue">1</span>
+				</div>
+				<div class="row">
+					<span class="hide blue">1</span>
+					<span><img alt="bomb" src="assets/bomb.gif"></span>
+					<span><img alt="bomb" src="assets/bomb.gif"></span>
+					<span><img alt="bomb" src="assets/bomb.gif"></span>
+					<span class="hide red">3</span>
+					<span class="red">3</span>
+					<span class="hide green">2</span>
+					<span class="hide blue">1</span>
+				</div>
+				<div class="row">
+					<span class="hide blue">1</span>
+					<span class="hide green">2</span>
+					<span class="hide red">3</span>
+					<span class="hide green">2</span>
+					<span class="hide green">2</span>
+					<span><img alt="bomb" src="assets/bomb.gif"></span>
+					<span class="hide blue">1</span>
+					<span class="hide"></span>
+				</div>
+			</div>
+		</section>
 	</body>
 </html>
